--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -1,207 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body *ngIf="verificar()">
-    <div class="encabezados" *ngIf="validarRol()">
-      <app-navbar-administrador
-        *ngIf="role === 'administrador'"
-      ></app-navbar-administrador>
-      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
-      <app-navbar-arrendador
-        *ngIf="role === 'arrendador'"
-      ></app-navbar-arrendador>
-    </div>
-    <div class="container" style="text-align: center">
-      <form
-        [formGroup]="form"
-        (submit)="registrar()"
-        class="example-form"
-        enctype="multipart/form-data"
-      >
-        <h2>Registro de Estacionamiento</h2>
 
-        <div class="formularios">
-          <div class="secciones">
-            <h2>INFORMACION</h2>
-            <mat-form-field class="example-full-width">
-              <mat-label>Tipo</mat-label>
-              <mat-select formControlName="tipoEstacionamiento">
-                <mat-option *ngFor="let p of tipos" [value]="p.value">
-                  {{ p.viewValue }}
-                </mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="obtenerControlCampo('tipoEstacionamiento')?.errors?.['required']"
-              >
-                El tipo de Estacionamiento es obligatorio.
-              </mat-error>
-            </mat-form-field>
-            <br />
-            <mat-form-field class="example-full-width">
-              <mat-label>Capacidad</mat-label>
-              <input
-                type="number"
-                matInput
-                placeholder="capacidad"
-                formControlName="capacidad"
-              />
-              <mat-error *ngIf="form.get('capacidad')?.invalid">
-                {{
-                  form.get('capacidad')!.errors?.['required'] ? 'La capacidad es obligatorio' :
-                  (form.get('capacidad')!.errors?.['pattern'] ? 'No puede ser decimal' :'')
-                }}
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="fill" class="example-full-width">
-              <mat-label>Fecha de registro</mat-label>
-              <input
-                matInput
-                placeholder="Ingrese fecha de Registro"
-                [matDatepicker]="picker"
-                formControlName="fechaRegistro"
-                readonly="true"
-              />
-              <mat-hint>MM/DD/YYYY</mat-hint>
-              <!--<mat-datepicker-toggle
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body *ngIf="verificar()">
+  <!-- Para ocultar barra en responsive -->
+  <button (click)="toggleNavbar()" class="toggle-button">
+    <i class="fa fa-bars"></i>
+  </button>
+  <!-- Fin de ocultar barra en responsive -->
+  <div class="encabezados" *ngIf="validarRol()">
+    <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+    <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+    <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+  </div>
+  <div class="container" style="text-align: center">
+    <form [formGroup]="form" (submit)="registrar()" class="example-form" enctype="multipart/form-data">
+      <h2>Registro de Estacionamiento</h2>
+
+      <div class="formularios">
+        <div class="secciones">
+          <h2>INFORMACION</h2>
+          <mat-form-field class="example-full-width">
+            <mat-label>Tipo</mat-label>
+            <mat-select formControlName="tipoEstacionamiento">
+              <mat-option *ngFor="let p of tipos" [value]="p.value">
+                {{ p.viewValue }}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="obtenerControlCampo('tipoEstacionamiento')?.errors?.['required']">
+              El tipo de Estacionamiento es obligatorio.
+            </mat-error>
+          </mat-form-field>
+          <br />
+          <mat-form-field class="example-full-width">
+            <mat-label>Capacidad</mat-label>
+            <input type="number" matInput placeholder="capacidad" formControlName="capacidad" />
+            <mat-error *ngIf="form.get('capacidad')?.invalid">
+              {{
+              form.get('capacidad')!.errors?.['required'] ? 'La capacidad es obligatorio' :
+              (form.get('capacidad')!.errors?.['pattern'] ? 'No puede ser decimal' :'')
+              }}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="example-full-width">
+            <mat-label>Fecha de registro</mat-label>
+            <input matInput placeholder="Ingrese fecha de Registro" [matDatepicker]="picker"
+              formControlName="fechaRegistro" readonly="true" />
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <!--<mat-datepicker-toggle
                 matIconSuffix
                 [for]="picker"
               ></mat-datepicker-toggle>-->
-              <mat-datepicker #picker></mat-datepicker>
-              <mat-error
-                *ngIf="obtenerControlCampo('fechaRegistro')?.errors?.['required']"
-              >
-                La fecha de registro es obligatoria.
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="fill" class="example-full-width">
-              <mat-label>Usuario</mat-label>
-              <mat-select formControlName="usuario">
-                <mat-option
-                  *ngFor="let p of listaUsuario"
-                  [value]="p.idUsuario"
-                >
-                  {{ p.nombre }}
-                </mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="obtenerControlCampo('usuario')?.errors?.['required']"
-              >
-                El usuario es obligatorio.
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <div class="secciones">
-            <h2>ESTADO</h2>
-            <mat-form-field class="example-full-width" *ngIf="edicion">
-              <mat-label>Disponibilidad</mat-label>
-              <mat-select formControlName="disponibilidad">
-                <mat-option
-                  *ngFor="let p of tipo_disponibilidad"
-                  [value]="p.value"
-                >
-                  {{ p.viewValue }}
-                </mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="obtenerControlCampo('disponibilidad')?.errors?.['required']"
-              >
-                La disponibilidad es obligatoria.
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field class="example-full-width">
-              <mat-label>Promedio de valoracion</mat-label>
-              <input
-                type="number"
-                matInput
-                placeholder="promedioValoracion"
-                formControlName="promedioValoracion"
-                readonly="true"
-              />
-              <mat-error
-                *ngIf="obtenerControlCampo('promedioValoracion')?.errors?.['required']"
-              >
-                El promedio de valoracion es obligatori.
-              </mat-error>
-            </mat-form-field>
-            <br />
-            <mat-form-field class="example-full-width">
-              <mat-label>Precio</mat-label>
-              <input
-                type="number"
-                matInput
-                placeholder="precio"
-                formControlName="precio"
-              />
-              <mat-error
-                *ngIf="obtenerControlCampo('precio')?.errors?.['required']"
-              >
-                El precio es obligatorio.
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="fill" class="example-full-width">
-              <mat-label>Localizacion</mat-label>
-              <mat-select formControlName="localizacion">
-                <mat-option
-                  *ngFor="let p of listaLocalizaciones"
-                  [value]="p.idLocalizacion"
-                >
-                  {{ p.direccion }}
-                </mat-option>
-              </mat-select>
-              <mat-error
-                *ngIf="obtenerControlCampo('localizacion')?.errors?.['required']"
-              >
-                La localizacion es obligatoria.
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <div class="secciones">
-            <h2>IMAGEN</h2>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-error *ngIf="obtenerControlCampo('fechaRegistro')?.errors?.['required']">
+              La fecha de registro es obligatoria.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="example-full-width">
+            <mat-label>Usuario</mat-label>
+            <mat-select formControlName="usuario">
+              <mat-option *ngFor="let p of listaUsuario" [value]="p.idUsuario">
+                {{ p.nombre }}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="obtenerControlCampo('usuario')?.errors?.['required']">
+              El usuario es obligatorio.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="secciones">
+          <h2>ESTADO</h2>
+          <mat-form-field class="example-full-width" *ngIf="edicion">
+            <mat-label>Disponibilidad</mat-label>
+            <mat-select formControlName="disponibilidad">
+              <mat-option *ngFor="let p of tipo_disponibilidad" [value]="p.value">
+                {{ p.viewValue }}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="obtenerControlCampo('disponibilidad')?.errors?.['required']">
+              La disponibilidad es obligatoria.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <mat-label>Promedio de valoracion</mat-label>
+            <input type="number" matInput placeholder="promedioValoracion" formControlName="promedioValoracion"
+              readonly="true" />
+            <mat-error *ngIf="obtenerControlCampo('promedioValoracion')?.errors?.['required']">
+              El promedio de valoracion es obligatori.
+            </mat-error>
+          </mat-form-field>
+          <br />
+          <mat-form-field class="example-full-width">
+            <mat-label>Precio</mat-label>
+            <input type="number" matInput placeholder="precio" formControlName="precio" />
+            <mat-error *ngIf="obtenerControlCampo('precio')?.errors?.['required']">
+              El precio es obligatorio.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="example-full-width">
+            <mat-label>Localizacion</mat-label>
+            <mat-select formControlName="localizacion">
+              <mat-option *ngFor="let p of listaLocalizaciones" [value]="p.idLocalizacion">
+                {{ p.direccion }}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="obtenerControlCampo('localizacion')?.errors?.['required']">
+              La localizacion es obligatoria.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="secciones">
+          <h2>IMAGEN</h2>
 
-            <mat-form-field class="example-full-width">
-              <mat-label>Foto</mat-label>
-              <input matInput placeholder="foto" formControlName="foto" />
-              <mat-error
-                *ngIf="obtenerControlCampo('foto')?.errors?.['required']"
-              >
-                La foto es obligatoria.
-              </mat-error>
-            </mat-form-field>
-            <div class="image-upload">
-              <input
-                type="file"
-                (change)="onFileSelected($event)"
-                accept="image/*"
-              />
+          <mat-form-field class="example-full-width">
+            <mat-label>Foto</mat-label>
+            <input matInput placeholder="foto" formControlName="foto" />
+            <mat-error *ngIf="obtenerControlCampo('foto')?.errors?.['required']">
+              La foto es obligatoria.
+            </mat-error>
+          </mat-form-field>
+          <div class="image-upload">
+            <input type="file" (change)="onFileSelected($event)" accept="image/*" />
 
-              <img
-                [src]="
+            <img [src]="
                   getImagenUrl() || 'assets/image/EstacionamientoDefault.jpg'
-                "
-                alt="Selected Image"
-                (error)="imagenNoCargada($event)"
-              />
-            </div>
+                " alt="Selected Image" (error)="imagenNoCargada($event)" />
           </div>
         </div>
-        <div class="btn-container">
-          <button class="boton_registro" mat-raised-button color="primary">
-            Registrar
-          </button>
-          <button
-            mat-raised-button
-            [routerLink]="[
+      </div>
+      <div class="btn-container">
+        <button class="boton_registro" mat-raised-button color="primary">
+          Registrar
+        </button>
+        <button mat-raised-button [routerLink]="[
               '/components/estacionamiento/listar_admin_estacionamientos'
-            ]"
-          >
-            Cancelar
-          </button>
-        </div>
-      </form>
-    </div>
-  </body>
+            ]">
+          Cancelar
+        </button>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
