--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.html
@@ -1,72 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body *ngIf="verificar()">
-    <div class="encabezados" *ngIf="validarRol()">
-      <app-navbar-administrador
-        *ngIf="role === 'administrador'"
-      ></app-navbar-administrador>
-      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
-      <app-navbar-arrendador
-        *ngIf="role === 'arrendador'"
-      ></app-navbar-arrendador>
-    </div>
-    <div class="header">
-      <h2>ELIJE EL ESTACIONAMIENTO DE TU PREFERENCIA</h2>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-    <div class="estacionamientos-container" *ngIf="verificar() && validarRol()">
-      <!-- Itera sobre los estacionamientos y muestra cada uno como una tarjeta -->
-      <mat-card
-        *ngFor="let estacionamiento of dataSource.data"
-        class="estacionamiento-card"
-        [routerLink]="[
+<body *ngIf="verificar()">
+  <!-- Para ocultar barra en responsive -->
+  <button (click)="toggleNavbar()" class="toggle-button">
+    <i class="fa fa-bars"></i>
+  </button>
+  <!-- Fin de ocultar barra en responsive -->
+  <div class="encabezados" *ngIf="validarRol()">
+    <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+    <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+    <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+  </div>
+  <div class="header">
+    <h2>ELIJE EL ESTACIONAMIENTO DE TU PREFERENCIA</h2>
+  </div>
+
+  <div class="estacionamientos-container" *ngIf="verificar() && validarRol()">
+    <!-- Itera sobre los estacionamientos y muestra cada uno como una tarjeta -->
+    <mat-card *ngFor="let estacionamiento of dataSource.data" class="estacionamiento-card" [routerLink]="[
           '/components/estacionamiento/detalle_estacionamiento',
           estacionamiento.idEstacionamiento
-        ]"
-      >
-        <button mat-icon-button class="favorite-button">
-          <mat-icon>favorite</mat-icon>
-        </button>
+        ]">
+      <button mat-icon-button class="favorite-button">
+        <mat-icon>favorite</mat-icon>
+      </button>
 
-        <!-- Utiliza la directiva [src] para asignar la URL de la imagen -->
-        <img
-          mat-card-image
-          [src]="getImagenUrl(estacionamiento)"
-          (error)="imagenNoCargada($event)"
-          alt="Foto del estacionamiento"
-          class="imagen-por-defecto"
-        />
+      <!-- Utiliza la directiva [src] para asignar la URL de la imagen -->
+      <img mat-card-image [src]="getImagenUrl(estacionamiento)" (error)="imagenNoCargada($event)"
+        alt="Foto del estacionamiento" class="imagen-por-defecto" />
 
-        <mat-card-header>
-          <mat-card-title>
-            <p>{{ estacionamiento.localizacion.distrito }}, Lima</p>
-          </mat-card-title>
-          <mat-card-subtitle>{{
-            estacionamiento.tipoEstacionamiento
+      <mat-card-header>
+        <mat-card-title>
+          <p>{{ estacionamiento.localizacion.distrito }}, Lima</p>
+        </mat-card-title>
+        <mat-card-subtitle>{{
+          estacionamiento.tipoEstacionamiento
           }}</mat-card-subtitle>
-          <mat-card-subtitle>{{
-            estacionamiento.disponibilidad ? "Disponible" : "No disponible"
+        <mat-card-subtitle>{{
+          estacionamiento.disponibilidad ? "Disponible" : "No disponible"
           }}</mat-card-subtitle>
-        </mat-card-header>
+      </mat-card-header>
 
-        <mat-card-content>
-          <p>S/. {{ estacionamiento.precio }} /hora</p>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <button
-      class="mostrar-mapa-button"
-      [routerLink]="[
+      <mat-card-content>
+        <p>S/. {{ estacionamiento.precio }} /hora</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <button class="mostrar-mapa-button" [routerLink]="[
         '/components/localizaciones/listar_usuario_localizaciones'
-      ]"
-    >
-      Mostrar Mapa<mat-icon> map</mat-icon>
-    </button>
-  </body>
+      ]">
+    Mostrar Mapa<mat-icon> map</mat-icon>
+  </button>
+</body>
+
 </html>
