--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body *ngIf="verificar()">
-    <div class="encabezados" *ngIf="validarRol()">
-      <app-navbar-administrador
-        *ngIf="role === 'administrador'"
-      ></app-navbar-administrador>
-      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
-      <app-navbar-arrendador
-        *ngIf="role === 'arrendador'"
-      ></app-navbar-arrendador>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body *ngIf="verificar()">
+  <!-- Para ocultar barra en responsive -->
+  <button (click)="toggleNavbar()" class="toggle-button">
+    <i class="fa fa-bars"></i>
+  </button>
+  <!-- Fin de ocultar barra en responsive -->
+  <div class="encabezados" *ngIf="validarRol()">
+    <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+    <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+    <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+  </div>
+  <div class="form">
+    <div class="generic-group">
+      <label for="inputId">Ingrese el ID:</label>
+      <input id="inputId" type="number" [(ngModel)]="id" />
+      <mat-error *ngIf="idNoEncontrado">El ID ingresado no existe. Por favor, intente con otro ID.</mat-error>
+      <br />
+      <button (click)="buscar()">Buscar</button>
     </div>
-    <div class="form">
-      <div class="generic-group">
-        <label for="inputId">Ingrese el ID:</label>
-        <input id="inputId" type="number" [(ngModel)]="id" />
-        <mat-error *ngIf="idNoEncontrado"
-          >El ID ingresado no existe. Por favor, intente con otro ID.</mat-error
-        >
-        <br />
-        <button (click)="buscar()">Buscar</button>
+    <hr />
+    <div class="generic-details" *ngIf="hrs_estacionamiento">
+      <h2 class="generic-heading">Detalles del Horario Estacionamiento</h2>
+      <div class="generic-box">
+        <h1>Direccion estacionamiento</h1>
+        <p>
+          {{ hrs_estacionamiento.estacionamiento.localizacion.direccion }}
+        </p>
       </div>
-      <hr />
-      <div class="generic-details" *ngIf="hrs_estacionamiento">
-        <h2 class="generic-heading">Detalles del Horario Estacionamiento</h2>
-        <div class="generic-box">
-          <h1>Direccion estacionamiento</h1>
-          <p>
-            {{ hrs_estacionamiento.estacionamiento.localizacion.direccion }}
-          </p>
-        </div>
-        <div class="generic-box">
-          <h1>Horario</h1>
-          <p>
-            {{ hrs_estacionamiento.horario.horaApertura }} {{ "-" }}
-            {{ hrs_estacionamiento.horario.horaCierre }}
-          </p>
-        </div>
+      <div class="generic-box">
+        <h1>Horario</h1>
+        <p>
+          {{ hrs_estacionamiento.horario.horaApertura }} {{ "-" }}
+          {{ hrs_estacionamiento.horario.horaCierre }}
+        </p>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
